[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/Loja.gd" type="Script" id=1]
[ext_resource path="res://assets/fontes/alterebro-pixel-font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/vendedor_galos.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.909804, 0.901961, 0.8, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="Loja" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.533333, 0.478431, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="."]
margin_left = 265.0
margin_top = 149.0
margin_right = 302.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vendedor" type="Sprite" parent="."]
position = Vector2( 64, 96 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="SeuDinheiroTexto" type="Label" parent="."]
margin_left = 153.0
margin_top = 8.0
margin_right = 209.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "Seu Dinheiro (R$): "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeuDinheiro" type="Label" parent="."]
margin_left = 229.0
margin_top = 8.0
margin_right = 305.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 0.807843, 0.0431373, 1 )
text = "100.00 "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="Panel" parent="."]
margin_left = 153.0
margin_top = 22.0
margin_right = 303.0
margin_bottom = 142.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ItemList"]
margin_left = 3.0
margin_top = 3.0
margin_right = 146.0
margin_bottom = 118.0
rect_min_size = Vector2( 143, 115 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ItemList/VBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 143, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Galo" type="Button" parent="ItemList/VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 15 )
custom_fonts/font = SubResource( 4 )
text = "Galo Aleatório"
align = 0

[node name="Preco" type="Label" parent="ItemList/VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.341176, 0.741176, 0.137255, 1 )
text = "R$ 200,00"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ItemList/VBoxContainer"]
margin_top = 24.0
margin_right = 144.0
margin_bottom = 44.0
rect_min_size = Vector2( 143, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaloEsp" type="Button" parent="ItemList/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 15 )
custom_fonts/font = SubResource( 4 )
text = "Galo Especial Aleatório"
align = 0

[node name="Preco" type="Label" parent="ItemList/VBoxContainer/HBoxContainer2"]
margin_left = 94.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.341176, 0.741176, 0.137255, 1 )
text = "R$ 500,00"
align = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ItemList/VBoxContainer"]
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
rect_min_size = Vector2( 143, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Racao" type="Button" parent="ItemList/VBoxContainer/HBoxContainer3"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 15 )
custom_fonts/font = SubResource( 4 )
text = "Racao Especial"
align = 0

[node name="Preco" type="Label" parent="ItemList/VBoxContainer/HBoxContainer3"]
margin_left = 94.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.341176, 0.741176, 0.137255, 1 )
text = "R$ 100,00"
align = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="ItemList/VBoxContainer"]
margin_top = 72.0
margin_right = 144.0
margin_bottom = 82.0
rect_min_size = Vector2( 143, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer5" type="HBoxContainer" parent="ItemList/VBoxContainer"]
margin_top = 86.0
margin_right = 144.0
margin_bottom = 106.0
rect_min_size = Vector2( 143, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensagem" type="Label" parent="ItemList/VBoxContainer/HBoxContainer5"]
margin_right = 143.0
margin_bottom = 20.0
rect_min_size = Vector2( 143, 20 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.301961, 1 )
text = "Comprou %s"
align = 1

[node name="CheatCodes" type="LineEdit" parent="."]
margin_left = 5.0
margin_top = 152.0
margin_right = 77.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 5 )
text = "cheat codes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cheat" type="Button" parent="."]
margin_left = 80.0
margin_top = 152.0
margin_right = 101.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Voltar" to="." method="_on_Voltar_button_down"]
[connection signal="button_down" from="ItemList/VBoxContainer/HBoxContainer/Galo" to="." method="_on_Galo_button_down"]
[connection signal="button_down" from="ItemList/VBoxContainer/HBoxContainer2/GaloEsp" to="." method="_on_GaloEsp_button_down"]
[connection signal="button_down" from="ItemList/VBoxContainer/HBoxContainer3/Racao" to="." method="_on_Racao_button_down"]
[connection signal="button_down" from="Cheat" to="." method="_on_Cheat_button_down"]
